added all the required buttons

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
 .App {
   text-align: center;
-  max-height: 1500px;
-  max-width: 1000px;
-  height: max-content;
-  width: 60%;
+  height: 90vh;
+  width: 50vw;
+  flex-shrink: 2;
   display: flex;
-  justify-content: space-between;
-  align-content: flex-start;
+  /*flex-wrap: nowrap;*/
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
-  border: red 20px solid;
-
+  /*border: red 20px solid;*/
+  align-items: baseline;
+  position: relative;
+  /*margin: 10px;*/
 }
 
 @media (prefers-reduced-motion: no-preference) {
