--- a/src/screen.css
+++ b/src/screen.css
@@ -1,11 +1,14 @@
 .screen {
-    text-align: center;
+    text-align: left;
 
-    height: 120px;
-    width: 100%;
+    height: 20%;
+    width: 70%;
     display: flex;
-
+    align-content: flex-end;
+    justify-content: flex-end;
+    align-items: center;
     flex-wrap: wrap;
-    border: blue 20px solid;
+    border: blue 2px solid;
+    margin-left: 8%;
 
 }
