--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 .App {
   text-align: center;
   height: 90vh;
-  width: 50vw;
+  width: 90%;
   flex-shrink: 2;
   display: flex;
-  /*flex-wrap: nowrap;*/
+
   flex-direction: row;
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
-  /*border: red 20px solid;*/
+
   align-items: baseline;
   position: relative;
-  /*margin: 10px;*/
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
