--- a/src/screen.css
+++ b/src/screen.css
@@ -1,6 +1,5 @@
 .screen {
     text-align: left;
-
     height: 20%;
     width: 70%;
     display: flex;
@@ -8,7 +7,6 @@
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
-    border: blue 2px solid;
-    margin-left: 8%;
-
+    border-bottom: blue 2px solid;
+    margin-left: 7%;
 }
