--- a/src/Operators.css
+++ b/src/Operators.css
@@ -2,10 +2,11 @@
     /*border: darkviolet  solid;*/
     /*display: none;*/
     /*width: 60%;*/
-    height: 65vh;
+    height: 40%;
     width: 20%;
     display: flex;
     flex-direction:column ;
     position: relative;
-    align-items: center
+    align-items: center;
+    justify-content: center;
 }
