--- a/src/Screen.css
+++ b/src/Screen.css
@@ -1,4 +1,4 @@
-.screen {
+.screen{
     text-align: left;
     height: 20%;
     width: 70%;
@@ -9,4 +9,13 @@
     flex-wrap: wrap;
     border-bottom: blue 2px solid;
     margin-left: 7%;
+}
+
+input{
+    height: 50%;
+    width: 100%;
+    border-bottom: blue 5px solid;
+    text-align: right;
+    font-size: larger;
+    overflow: auto;
 }
